k8s-manifests/overlays/dev/superapp/client/loan/patch/dev-patch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yabex
spec:
  replicas: 1
  template:
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: yabex
        image: harbor.cbe.com.et/cbe-superapp/yabex-dev:latest
        imagePullPolicy: Always
