k8s-manifests/overlays/dev/superapp/client/loan/patch/route-patch.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: yabex-route
spec:
  path: /api/v1/cbesuperapp/yabex
  to:
    name: yabex
    weight: 100
    kind: Service
  host: devapisuperapp.cbe.com.et
  port:
    targetPort: 8080
